# trading-infra-git

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  commit-rules.md  pyproject.toml
.github/workflows/: daily-paper.yml
docs/: operator-runbook.md  progress-checklist.md  strategy-contract.md
memory/: 2026-06-28-full-readme-alignment-checklist.md  2026-06-28-historical-nse-plan-checklist.md  2026-06-29-audit-implementation-checklist.md  2026-07-05-operator-friction-followups-checklist.md  2026-07-05-private-strategy-runtime-and-two-strat-port-checklist.md  2026-07-17-market-data-refactor-checklist.md  index.md
memory/decisions/: 2026-06-27-infra-baseline.md  2026-06-27-infra-ready-checklist.md  2026-06-27-local-paper-readiness.md  2026-06-27-tech-stack.md  2026-06-28-market-data-publishing.md  2026-06-28-nse-legacy-symbol-identifier.md  2026-06-28-progress-tracking.md  2026-06-29-audit-format-and-manifests.md  2026-06-29-r2-budget-thresholds.md  2026-07-05-history-operator-review-and-upload-contract.md  2026-07-05-private-flattened-pickle-strategy-direction.md  2026-07-05-private-pickle-runtime-contract-v1.md  (+1 more)
src/trading_infra/: __init__.py  (+9 more)
tests/: test_backtest_pipeline.py  test_bhavcopy.py  test_cli.py  test_decisions.py  test_history.py  test_history_upload.py  test_integration_pipeline.py  test_market_data.py  test_market_data_refresh.py  test_market_data_upload.py  test_paper_pipeline.py  test_private_pickle_and_performance.py  test_r2.py  test_registry.py  test_remote_storage.py  test_strategy_builder.py  test_strategy_store.py  test_workflow.py
(+57 files in other folders)
